--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/style.css">
     <title>Trex Chrome Game</title>
   </head>
   <body onload="init()">
