--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <canvas id="myCanvas" width="700" height="300" style="border:1px solid black"></canvas>
 
+    <p>Marc Fortes Domínguez - 2019</p>
+
     <script src="script.js"></script>
 
   </body>
